fix alignement deeplink
Former-commit-id: d2a42e7ae1cca66e4c02161aba90cca918e8b9c6 [formerly 3514b5e6049c8efca9e961ce6191902cafab4866]
Former-commit-id: 05e409fee0ce8590d4b15e5245a2f7793d5f345f

--- a/src/assets/css/article.scss
+++ b/src/assets/css/article.scss
@@ -6,6 +6,7 @@
 
 .article .post-main{
 	h1, h2, h3, h4, h5 {
+		display: flex;
 		position: relative;
 		padding-left: 2em;
 		left: -2em;
@@ -20,7 +21,6 @@
 		display: none;
 		padding:0 .5em;
 		@apply text-accent;
-		top: 50%;
 	}
 }
 
@@ -46,3 +46,13 @@
 
 
 
+	.container-wide {
+		margin-left: calc(30% - 30vw);
+		margin-right: calc(30% - 30vw);
+		position: relative
+	}
+
+
+	.article .post-main img {
+		margin:auto
+	}
